--- a/rat_seizure_video_analysis/pkg/gui/mainw.ui
+++ b/rat_seizure_video_analysis/pkg/gui/mainw.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>433</width>
+    <width>440</width>
     <height>330</height>
    </rect>
   </property>
@@ -48,27 +48,27 @@
   <widget class="QLabel" name="rat1IDLabel">
    <property name="geometry">
     <rect>
-     <x>0</x>
+     <x>8</x>
      <y>80</y>
-     <width>59</width>
+     <width>51</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;rat1 ID&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;rat1: ID&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QLabel" name="rat2IDLabel">
    <property name="geometry">
     <rect>
-     <x>0</x>
+     <x>8</x>
      <y>120</y>
-     <width>59</width>
+     <width>51</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;rat2 ID&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;rat2: ID&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="rat1IDInput">
@@ -76,7 +76,7 @@
     <rect>
      <x>70</x>
      <y>80</y>
-     <width>341</width>
+     <width>231</width>
      <height>31</height>
     </rect>
    </property>
@@ -94,7 +94,7 @@
     <rect>
      <x>70</x>
      <y>120</y>
-     <width>341</width>
+     <width>231</width>
      <height>31</height>
     </rect>
    </property>
@@ -221,6 +221,70 @@
    </property>
    <property name="text">
     <string>quit</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="rat1CamIDLabel">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>80</y>
+     <width>51</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;camID&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="rat2CamIDLabel">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>120</y>
+     <width>51</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;camID&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="rat1CamIDBox">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>80</y>
+     <width>61</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="minimum">
+    <number>-1</number>
+   </property>
+   <property name="maximum">
+    <number>1000</number>
+   </property>
+   <property name="value">
+    <number>-1</number>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="rat2CamIDBox">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>120</y>
+     <width>61</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="minimum">
+    <number>-1</number>
+   </property>
+   <property name="maximum">
+    <number>1000</number>
+   </property>
+   <property name="value">
+    <number>-1</number>
    </property>
   </widget>
  </widget>
