camthread is back to handling both cameras with a single thread. improved the tab order of mainw.

--- a/rat_seizure_video_analysis/pkg/gui/mainw.ui
+++ b/rat_seizure_video_analysis/pkg/gui/mainw.ui
@@ -288,6 +288,18 @@
    </property>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>selectMasterButton</tabstop>
+  <tabstop>rat1IDInput</tabstop>
+  <tabstop>rat1CamIDBox</tabstop>
+  <tabstop>rat2IDInput</tabstop>
+  <tabstop>rat2CamIDBox</tabstop>
+  <tabstop>videoDurationBox</tabstop>
+  <tabstop>numVideosBox</tabstop>
+  <tabstop>startButton</tabstop>
+  <tabstop>stopButton</tabstop>
+  <tabstop>quitButton</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
